# opal-orchestrator

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/mcp/: __init__.py  stubs.py
backend/app/models/: __init__.py  capability.py  conversation.py  database.py  facility.py  job.py  lab.py  protocol.py  resource.py  schemas.py  source.py
backend/app/routers/: __init__.py  capabilities.py  chat.py  conversations.py  ingest.py  sources.py
backend/app/services/: __init__.py  chat.py  embeddings.py  ingestion.py  job.py  llm.py  planner.py  retrieval.py
backend/app/tools/: __init__.py
backend/cli/: __init__.py  ingest.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_chat_router.py  test_job_integration.py  test_job_service.py
frontend/: Dockerfile  docker-entrypoint.sh  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/capabilities/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/sources/: page.tsx
frontend/src/components/: Header.tsx
frontend/src/components/Chat/: ChatHistory.tsx  ChatPanel.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/components/Plan/: PlanPanel.tsx  PlanStep.tsx
frontend/src/components/Sources/: Citation.tsx  SourcesPanel.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
scripts/: run_eval.py  test_cases.json
scripts/seed_data/: capabilities.yaml
