[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opal-orchestrator"
version = "0.1.0"
description = "OPAL Orchestration Chatbot - Cross-lab resource utilization planning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OPAL Team"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "chromadb>=0.4.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "httpx>=0.26.0",
    "pdfplumber>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[project.scripts]
opal-ingest = "cli.ingest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cli*"]
